# CryptoMarketDataFetcher

./: CMakeLists.txt  README.md  compile.sh
config/: crypto_names.txt  ohlc_params.json
src/: candlestickDataDownloader.cpp  candlestickDataFetcher.cpp  marketDataFetcher.cpp
src/api/: CMakeLists.txt  api.h  bitstamp_api.cpp  bitstamp_api.h  web_requests.h
src/crypto_market_data/: CMakeLists.txt  crypto.cpp  crypto.h  market_data_fetcher.cpp  market_data_fetcher.h
src/json_reader/: CMakeLists.txt  json_reader.cpp  json_reader.h  multi_json_reader.cpp  multi_json_reader.h
src/utils/: utils.cpp  utils.h
